[fix] change layout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,3 +41,15 @@
     transform: rotate(360deg);
   }
 }
+
+.form-control:read-only{
+  background-image: none;
+}
+
+.form-control{
+  background-image: none;
+}
+
+.anticon{
+  vertical-align: 0.125em !important;
+}
